Fix issue where the 'not translations exist' message on the home page was not rendered correctly. The text next to the logo didn't wrap correctly, was wrapping under the logo, and the logo didn't fit right on smaller screens.\ This change set hides the logo on smaller screens and ensures that the text does not wrap under the logo but that the text drops under the logo when there isn't enough space for the text to be next to the logo.

--- a/app/assets/stylesheets/root_strings.scss
+++ b/app/assets/stylesheets/root_strings.scss
@@ -56,13 +56,19 @@
 	margin-left: auto;
 	margin-right: auto;
 
-	div:not(:last-child) {
+	div {
 		float: left;
 		margin-right: 10px;
 	}
 
 	img {
 		margin-top: 10px;
+	}
+
+	@media screen and (max-width: 645px) {
+		img {
+			display: none;
+		}
 	}
 
 	a {
